--- a/style.css
+++ b/style.css
@@ -1,265 +1,152 @@
-h1{
-color: red;
-}
-header{
-    display : flex;
-    justify-content: center;
-    align-items: center;
-    font-family: 'Playpen Sans', cursive;
-    padding : 10px;
-    font: black;
-
-    height : 100px;
-}
-
-
-header, h2{
-    padding : 5px;
-}
-.icon{
-    height: 70px;
-    width : 70px;
-}
-
-.sub{
-    position: relative;
-    top: 1.5rem;
-    right: 6rem;
-
-}
-
-.d-flex button{
-    position: relative;
-    right: 0rem;
-    left:1rem;
-    top : 0rem;
-    /* padding : 0; */
-
-}
-.navbar{
-    background-color: #e2f72d;
-    padding:0;
-
-}
-/* .navb{
-    background-color: #E95793;
-} */
-
-.nav-item{
-    margin-right:2rem;
-    margin-left:2rem;
-    padding:0;  
-}
-
-.tw{
-    display: flex;
-    align-items: center;
-    justify-content: center;
-    /* border:5px solid red; */
-    position:relative;
-    right:5rem;
-    padding:0;
-}
-
-.content1{
-    /* border: 10px solid red; */
-   height: 35rem;
-    /* background-color: rgb(243, 230, 40); */
-    width:100vh;
-    /* border-bottom: 10px solid red; */
-  }
-  
- .image{
-    position: relative;
-    left: 44rem;
-    top: 1rem;
-    width: 30rem;
-    height: 30rem;
-    border-radius: 50%;
-     /* background-color: rgb(243, 230, 40); */
-        /* border: 10px solid rgb(0, 4, 255); */
-
-}
-
-.text-content1{
-    position: relative;
-    bottom: 20rem;
-    left:15rem;
-    /* font-family: 'Pacifico', cursive; */
-    /* font-family: 'Lobster', sans-serif; */
-   /* border: 10px solid red; */
-padding : 1rem;
-}
-.tfrst {
-    font-family: 'Pacifico', cursive;
-    font-size:120%;
-    font-weight: 650;
-    position:relative;
-    right: 7rem;
-
-}
-.tsec{
-position:relative;
-right:7rem;
-font-family: 'Titillium Web', sans-serif;
-font-weight: bold;
-color:rgb(199, 119, 90);
-font-weight:900;
-font-size: 350%;
-}
-
-.btn{
-    position : relative;
-    top:2rem;
-    right: 7rem;
-    font-weight: 900;
-}
-
-.about{
-    /* border:10px solid yellow; */
-    width:99lvw;
-    height: 25rem;
-    /* background-color: #3D30A2; */
-    border-top-right-radius: 40%;
-    border-bottom-right-radius: 40%;
-}
-
-.abt-img{
-    height:25rem;
-    width:25rem;
-    position:relative;
-    right:0;
-    left:3rem;
-    border-radius:45%;
-
-}
-
-
-
-/* .conimg{
-    border: 10px solid green;
+body{
+    background-color: rgb(0,0,33);
+    color:white;
+    font-family: 'Poppins', sans-serif;
    
-}*/
-
-
-.in-about{
-    position:absolute;
-    left:7rem;
-    height: 25rem;
-    width:90lvw;
-    background-color: blueviolet;
-    border-top-left-radius: 18%;
-    border-bottom-left-radius: 18%;
 }
 
-.about-text{
-    /* border: 5px solid red; */
-    display: inline-block;
-    position: relative;
-    left: 10rem;
-    position: relative;
-    top:4rem;
-    color: white;
+*{
+    margin: 0;
+    padding: 0;
 }
 
-.heading  .first{
-    /* border: 5px solid black; */
-display: flex;
-justify-content: center;
-align-items: center;
-position:relative;
-bottom:2rem;
-font-weight: 700;
-
-}
-
-.heading  p{
-
-line-height: 1rem;
-color:black;
-font-weight: 700;
-
-}
-
-p .sp1{
+nav{
     display: flex;
-justify-content: center;
-align-items: center;
-
-}
-p .sp2{
-    display: flex;
-justify-content: center;
-align-items: center;
-
-}
-p .sp3{
-    display: flex;
-justify-content: center;
-align-items: center;
-
-}
-p .sp4{
-    display: flex;
-justify-content: center;
-align-items: center;
-
-}
-/* 
-.products{
-    
-    height: 25rem;
-    width:90lvw;
-    background-color: blueviolet;
-    
-} */
-
-.card-body1{
-    display: flex;
+    justify-content:space-around;
     align-items: center;
-    justify-content: center;
-    /* border: 5px solid red; */
-   
-  
-}
-
-.card-body{
-      background-color: #F4CE14;
-      margin-top: 0.5rem;
-      display: flex;
-    align-items: center;
-    justify-content: center;
+    height:80px;
+    background-color:rgb(18,18,62);
+    font-family: 'Poppins', sans-serif;
     font-weight: 600;
-
-}
-.card{
- margin-top: 3rem;
- /* padding : 1rem; */
- margin-left: 1rem; 
-
- height: 30rem;
- width: 18rem;
-
- border-radius: 5px;
- 
 }
 
-.shop{
+nav ul{
     display: flex;
-    align-items: center;
     justify-content: center;
-    margin-top: 2rem;
-    font-weight: 700;
+    align-items: center;
 }
 
-.card img{
-    height:10rem;
-    width:14rem;
-    display: flex;
-    align-items: center;
-    justify-content: center;
+nav ul li{
+    list-style-type: none;
+    margin: 0 23px;
+}
+nav ul li a{
+    text-decoration: none;
+    color:white;
+}
 
-    position : relative;
-    left:1rem;
+nav ul li a:hover{
+    
+    color:rgb(94, 96, 236);
+    font-size: 1.1rem;
+}
+
+.left{
+    font-size: 1.5rem;
+}
+
+.firstSection{
+    display:flex;
+    justify-content: space-around;
+   align-items: center;
+    /* margin:80px 0; */
+}
+
+.firstSection >div{
+    width:40%;
+}
+
+.leftSection{
+    /* background-color: red; */
+    margin-top: 10px;
+    font-size: 2.5rem;
+    
+}
+
+
+.leftSection .btn{
+    padding: 12px;
+    background-color: #1e2167;
+    color: white;
+    border: 2px solid white;
+    border-radius: 6px;
+    font-size: 15px;
+    cursor: pointer;
+    font-weight:600;
+}
+
+.res{
+    text-decoration: none;
+    color:white;
+}
+.rightSection img{
+    /* background-color: red; */
+   margin-top:40px;
+    width:80%;
+    /* border: 10px solid red; */
+    padding:0;
+
+}
+
+.purple{
+    color:rgb(134, 55, 207);
+}
+
+#element{
+    color:rgb(134, 55, 207);
+}
+
+.secondSection{
+    max-width: 80vw;
+    margin : auto;
+    height: 80vh;
+}
+
+.secondSection h1{
+    font-size: 1.9rem;
+}
+
+.secondSection .box{
+    background: white;
+    width: 80vw;
+    height: 2px;
+    margin: 56px 0;
+    display: flex;
+
+}
+main hr{
+    border:0;
+    background: #4c46c4;
+    height:1px;
+    margin: 40px 84px;
+}
+
+.secondSection .verticle{
+    height: 93px;
+    width:1px;
+
+    margin: 0px 100px;
+    background: white;
+
+}
+
+.image-top{
+    width:23px;
+    position:relative;
+    top: -32px;
+    left: -9px;
+}
+.verticle-title{
+    position:relative;
+    top: 75px;
+    width: 150px;
+}
+
+.verticle-desc{
+    position: relative;
+    color: grey;
+    top: 86px;
+    width: 150px;
+    font-size:9px;
 }
 
